Make multiple choice formatting not shit

--- a/multiple_choice_model/templates.yaml
+++ b/multiple_choice_model/templates.yaml
@@ -1,7 +1,9 @@
 - name: Default
   qfmt: |
     {{Prompt}}
+    <ol id="options" type="A">
     {{Options}}
+    </ol>
   afmt: |
     {{FrontSide}}
 
