Don't bake true false string into question

--- a/true_false_model/templates.yaml
+++ b/true_false_model/templates.yaml
@@ -1,9 +1,9 @@
 - name: Default
   qfmt: |
-    {{Front}}
+    {{Prompt}} (True / False)
   afmt: |
     {{FrontSide}}
 
     <hr id=answer>
 
-    {{Back}}
+    {{Answer}}
